# ai-dev-assistant

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai_dev_assistant/app/: ask.py  ask_with_memory.py
src/ai_dev_assistant/cli/: ask.py  build_vector_store.py  chat.py  export_yaml_preview.py  index_repo.py  init_data.py  inspect_repo.py  rebuild_embeddings.py
src/ai_dev_assistant/infra/: ai_client.py  config.py  embeddings.py  llm_reasoning.py  logging_setup.py  memory_sqlite.py  openai_client.py  vector_store.py
src/ai_dev_assistant/rag/: ast_utils.py  chunking.py  config.py  context.py  cost.py  embedding_pipeline.py  embedding_policy.py  memory.py  modes.py  overviews.py  schema.py  semantic_search.py
src/ai_dev_assistant/services/: context.py  explain.py  memory_summary.py  search.py
src/ai_dev_assistant/tools/: build_vector_store.py  defaults.py  export_yaml_preview.py  index_repo.py  init_data.py  rebuild_embeddings.py
src/ai_dev_assistant/tools/data/: faiss_meta.json
tests/: conftest.py  test_build_vector_store.py  test_export_yaml_preview.py  test_index_repo.py  test_memory_summarization_trigger.py  test_rebuild_embeddings.py
tests/data/mini_repo/: chunks.json  embeddings.json
tests/fixtures/mini_repo/: adapter.py  factory.py
tests/manual/: ask_demo.py  ask_with_memory.py  context_expansion_demo.py  retrieve_and_explain_demo.py  retrieve_demo.py  retrieve_with_context_demo.py  semantic_search_demo.py  utils.py
